@@ -25,6 +25,7 @@ Version 3.2.0 - SVN
  - In JS problem name detection, probid needs to be casenormalised too.
  - Fix websubmit when using numeric problem ID's, thanks Vladimir Vassiliev.
  - Allow specification of contest times relative to starttime.
+ - Add toggle button for autorefresh of jury pages (port from ETH tree).
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
